[generator] New StreamService to handle stream creation according to verbose mode (parallel stream or not)